# Dawn-Digital-Audio-Workstation

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
scripts/: generate_resources_header.py
src/: dawn_main.cpp
src/common/: helpers.h
src/core/: CMakeLists.txt  logger.h
src/core/resource/: CMakeLists.txt  resource_manager.cpp  resource_manager.h
src/core/resource/detail/: resource_cache.h  resource_loader.h  resource_traits.h
src/ui/: CMakeLists.txt  dawn_window.cpp  dawn_window.h
src/ui/components/panels/: title_bar.cpp  title_bar.h
src/ui/controls/button/: dawn_button.cpp  dawn_button.h
src/ui/theme/: CMakeLists.txt  theme_listener.h  theme_manager.cpp  theme_manager.h
src/ui/theme/detail/: style_traits.h  theme_bundle.h
src/ui/theme/ids/: all_ids.h  button_ids.h
src/ui/theme/styles/: all_style.h  button_style.h
src/ui/theme/themes/: all_themes.h  dark.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/resource/: resource_api_test.cpp
tests/ui/: CMakeLists.txt
tests/ui/theme/: theme_api_test.cpp
